--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         </form>
     </header>
     <main>
-        <section id="task-list">Tasks</section>
+        <section id ="task-list">
+            <h2>Tasks</h2>
         <div id ="tasks">
             <div class="task">
                 <div class="content">
@@ -28,6 +29,7 @@
                 </div>
             </div>
         </div>
+    </section>
     </main>
     <script src="index.js"></script>
 </body>
