--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id ="tasks">
             <div class="task">
                 <div class="content">
-                    <input type="text" class="text" value="">
+                    <input type="text" class="text" value="eat" >
                 </div>
                 <div class="actions">
                     <button class="edit">Edit</button>
