--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <section id ="task-list">
             <h2>Tasks</h2>
-        <div id ="tasks">
+        <!-- <div id ="tasks">
             <div class="task">
                 <div class="content">
                     <input type="text" class="text" value="eat" >
@@ -28,7 +28,7 @@
                     <button class="delete">Delete</button>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
     </main>
     <script src="index.js"></script>
